force-app/main/default/objects/Client_Collection__c/Client_Collection__c.object-meta.xml
<CustomObject>
    <description>Master Collection From Client - Master Detail to Account With Related Lists To Split Collection To Relevant Policies</description>
    <label>Client Collection</label>
    <nameField>
        <label>Master Collection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Collections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>