force-app/main/default/objects/Client_Collection__c/fields/Number_Of_Payments__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Payments__c</fullName>
    <label>Number Of Payments</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>