force-app/main/default/objects/Client_Collection__c/fields/Payment_Currency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Currency__c</fullName>
    <label>Payment Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ILS</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>EURO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>