force-app/main/default/objects/Client_Collection__c/fields/Send_Alert__c.field-meta.xml
<CustomField>
    <fullName>Send_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if you want to send a Task to Collection Manager</inlineHelpText>
    <label>Send Alert</label>
    <type>Checkbox</type>
</CustomField>