force-app/main/default/objects/Client_Collection__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Status Of Payment</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Process</fullName>
                <default>true</default>
                <label>In Process</label>
            </value>
            <value>
                <fullName>Collected</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>