force-app/main/default/objects/Client_Collection__c/fields/Total_Payment__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment__c</fullName>
    <label>Total Payment</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>